--- a/Css/stylesheet.css
+++ b/Css/stylesheet.css
@@ -1,21 +1,74 @@
-.blacktext {
-  width: auto;
-  min-width: 200px;
-  max-width: 750px;
-  text-align: center;
-  color: white;
+body {
+    background-image: url("background.jpeg");
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+ul {
+  list-style-type: none;
+  color: White;
+  display: block;
+  margin: auto;
   font-family: Raleway, sans-serif;
 }
 
-.bannerimage {
-  background: #7C8D9F;
+.profileimg {
+  min-height: 500px
+  min-width: 500px
+  display: block;
+  margin-left: 20px;
+  margin-right: 20px;
+}
+
+.textright{
+  text-align: right;
+}
+
+.flex{
+  display: flex;
+}
+
+.imageright{
+  margin-left: auto
+}
+
+.imageleft{
+  margin-right: auto
+}
+
+.imagesize750px{
+    max-width: 750px;
+    max-height: 750px;
+}
+
+.logoimg {
+  width: 100px;
+  height: 100px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.collum{
+  border-radius: 30px;
+  width: 300px;
+  height: 500px;
+  background: #999999;
+  margin: auto;
+}
+
+.parallax {
+  background-image: url("https://external-content.duckduckgo.com/iu/?u=http%3A%2F%2Fi.huffpost.com%2Fgen%2F1443854%2Fimages%2Fo-CODING-facebook.jpg&f=1&nofb=1");
   min-height: 500px;
-  max-height: 1000px;
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .round1 {
   border-radius: 25px;
-  background: #576575;
+  background: #ADB7C2;
   opacity: 0.6;
   padding: 20px;
   min-width: 200px;
@@ -33,17 +86,24 @@
   margin: auto;
 }
 
-
-.pblack {
-  width: auto;
-  min-width: 200px;
-  max-width: 750px;
-  text-align: center;
-  color: black;
-  font-family: Raleway, sans-serif;
+.padding {
+  padding-top: 50px;
+  padding-left: 80px;
 }
 
-.h1black{
+
+.container1200px{
+  max-width: 1200px
+}
+
+.box {
+  display: flex;
+  max-width: 1500px;
+  align-items: center;
+  margin: auto;
+}
+
+.bigblacktext{
   display: block;
   font-size: 2em;
   color: black;
@@ -51,146 +111,161 @@
   font-family: Raleway, sans-serif;
 }
 
-.h2black {
-  display: block;
-  text-align: center;
-  color: black;
-  font-family: Arial, Helvetica, sans-serif;
-}
-
-.h3black {
-  width: auto;
-  font-family: Arial, Helvetica, sans-serif;
-  min-width: 200px;
-  max-width: 750px;
-  text-align: center;
-  color: black;
-  font-family: Raleway, sans-serif
-}
-
-.ablack {
+.smallblacktext {
   display: block;
   color: black;
   text-align: center;
   font-family: Raleway, sans-serif;
 }
 
-.pblack {
-  width: auto;
-  min-width: 200px;
-  max-width: 750px;
-  text-align: center;
-  color: black;
-  font-family: Raleway, sans-serif;
-}
-
-.h1white {
-  display: block;
-  font-size: 2em;
-  color: White;
-  text-align: center;
-  font-family: Raleway, sans-serif;
-}
-
-.h2white {
-  display: block;
-  text-align: center;
-  color: White;
-  font-family: Arial, Helvetica, sans-serif;
-}
-
-.h3white {
-  width: auto;
-  font-family: Arial, Helvetica, sans-serif;
-  min-width: 200px;
-  max-width: 750px;
-  text-align: center;
-  color: White;
-  font-family: Raleway, sans-serif
-}
-
-.awhite {
+.bigwhitetext {
   display: block;
   color: White;
   text-align: center;
   font-family: Raleway, sans-serif;
 }
 
-.pwhite {
+.smallwhitetext {
   display: block;
   color: White;
   text-align: center;
   font-family: Raleway, sans-serif;
 }
 
-body {
-    background-image: url("background.jpeg");
-    background-repeat: no-repeat;
-    background-size: cover;
+.smallwhitetextright {
+  display: block;
+  color: White;
+  text-align: right;
+  font-family: Raleway, sans-serif;
 }
 
-.parallax {
-  background-image: url("https://external-content.duckduckgo.com/iu/?u=http%3A%2F%2Fi.huffpost.com%2Fgen%2F1443854%2Fimages%2Fo-CODING-facebook.jpg&f=1&nofb=1");
-  min-height: 500px;
-  background-attachment: fixed;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
+.smallwhitetextleft {
+  display: block;
+  color: White;
+  text-align: left;
+  font-family: Raleway, sans-serif;
+  padding-left: 10px;
 }
 
-.faicons {
-  padding: 20px;
-  font-size:60px;
-  margin-left: auto;
-  margin-right: auto;
-  display: grid;
+.list {
+  color: White;
+  padding-left: 10px;
+  list-style-type: none;
+  font-family: Raleway, sans-serif;
 }
 
-.overlay {
-  height: 100%;
-  width: 0;
-  position: fixed;
-  z-index: 1;
-  top: 0;
-  left: 0;
-  opacity: 0.9;
-  background-color: #C0C0C0;
-  overflow-x: hidden;
-  transition: 0.5s;
+.bannerimage {
+  background: #ADB7C2;
+  min-height: 750px;
+  min-width: 100%;
+  margin: auto;
 }
 
-.overlay-content {
-  position: relative;
-  top: 25%;
-  width: 100%;
-  text-align: center;
-  margin-top: 30px;
+
+.spacing300px {
+  height: 300px;
 }
 
-.overlay a {
-  padding: 8px;
+.spacing200px {
+  height: 200px;
+}
+
+.spacing100px {
+  height: 100px;
+}
+
+.spacing10px {
+  height: 10px;
+}
+
+a {
+  color: #fff;
   text-decoration: none;
-  font-size: 36px;
-  color: #818181;
-  display: block;
-  transition: 0.3s;
 }
-
-.overlay a:hover, .overlay a:focus {
-  color: #f1f1f1;
+.me {
+  width: 400px;
+  margin: 90px auto;
 }
-
-.overlay .closebtn {
+.me p,
+.me h1 {
+  text-transform: uppercase;
+  letter-spacing: 3px;
+  text-align: center;
+}
+.me p {
+  font-weight: 200;
+}
+.me span {
+  font-weight: bold;
+}
+.social {
   position: absolute;
   top: 20px;
-  right: 45px;
-  font-size: 60px;
 }
-
-@media screen and (max-height: 450px) {
-  .overlay a {font-size: 20px}
-  .overlay .closebtn {
-  font-size: 40px;
-  top: 15px;
-  right: 35px;
-  }
+.social ul {
+  padding: 0px;
+  -webkit-transform: translate(-270px, 0);
+  -moz-transform: translate(-270px, 0);
+  -ms-transform: translate(-270px, 0);
+  -o-transform: translate(-270px, 0);
+  transform: translate(-270px, 0);
+}
+.social ul li {
+  display: block;
+  margin: 5px;
+  background: rgba(0, 0, 0, 0.36);
+  width: 300px;
+  text-align: right;
+  padding: 10px;
+  -webkit-border-radius: 0 30px 30px 0;
+  -moz-border-radius: 0 30px 30px 0;
+  border-radius: 0 30px 30px 0;
+  -webkit-transition: all 1s;
+  -moz-transition: all 1s;
+  -ms-transition: all 1s;
+  -o-transition: all 1s;
+  transition: all 1s;
+}
+.social ul li:hover {
+  -webkit-transform: translate(110px, 0);
+  -moz-transform: translate(110px, 0);
+  -ms-transform: translate(110px, 0);
+  -o-transform: translate(110px, 0);
+  transform: translate(110px, 0);
+  background: rgba(255, 255, 255, 0.4);
+}
+.social ul li:hover a {
+  color: #000;
+}
+.social ul li:hover i {
+  color: #fff;
+  background: red;
+  -webkit-transform: rotate(360deg);
+  -moz-transform: rotate(360deg);
+  -ms-transform: rotate(360deg);
+  -o-transform: rotate(360deg);
+  transform: rotate(360deg);
+  -webkit-transition: all 1s;
+  -moz-transition: all 1s;
+  -ms-transition: all 1s;
+  -o-transition: all 1s;
+  transition: all 1s;
+}
+.social ul li i {
+  margin-left: 10px;
+  color: #000;
+  background: #fff;
+  padding: 10px;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  border-radius: 50%;
+  width: 20px;
+  height: 20px;
+  font-size: 20px;
+  background: #ffffff;
+  -webkit-transform: rotate(0deg);
+  -moz-transform: rotate(0deg);
+  -ms-transform: rotate(0deg);
+  -o-transform: rotate(0deg);
+  transform: rotate(0deg);
+}
